--- a/demos/index.html
+++ b/demos/index.html
@@ -13,6 +13,9 @@
 			margin: auto;
 			width: 50% !important;
 		}
+		.zsfootball-round caption {
+			color: deepskyblue;
+		} 
 	</style>
 </head>
 <body>
