Adds country data to demos

--- a/demos/index.html
+++ b/demos/index.html
@@ -27,6 +27,7 @@
 				id: 301,
 				competitionId: {
 					id: 201,
+					country: 'United Kingdom',
 					sportId: 100,
 					seasonId: {id: 80001, title: '2015-16'},
 					title: 'Barclays Premier League'
@@ -122,6 +123,7 @@
 				id: 301,
 				competitionId: {
 					id: 201,
+					country: 'United Kingdom',
 					sportId: 100,
 					seasonId: {id: 80001, title: '2015-16'},
 					title: 'Barclays Premier League'
@@ -152,6 +154,7 @@
 				id: 301,
 				competitionId: {
 					id: 201,
+					country: 'United Kingdom',
 					sportId: 100,
 					seasonId: {id: 80001, title: '2015-16'},
 					title: 'Barclays Premier League'
@@ -248,6 +251,7 @@
 				id: 301,
 				competitionId: {
 					id: 201,
+					country: 'United Kingdom',
 					sportId: 100,
 					seasonId: {id: 80001, title: '2015-16'},
 					title: 'Barclays Premier League'
@@ -286,6 +290,7 @@
 				id: 301,
 				competitionId: {
 					id: 201,
+					country: 'United Kingdom',
 					sportId: 100,
 					seasonId: {id: 80001, title: '2015-16'},
 					title: 'Barclays Premier League'
