Completition change uses Storage

--- a/demos/index.html
+++ b/demos/index.html
@@ -25,7 +25,7 @@
 			elementClasses: 'table-striped table-bordered',
 			round: {
 				id: 301,
-				competitionId: {
+				competition: {
 					id: 201,
 					country: 'United Kingdom',
 					sportId: 100,
@@ -121,13 +121,7 @@
 			elementClasses: 'table-striped table-bordered',
 			round: {
 				id: 301,
-				competitionId: {
-					id: 201,
-					country: 'United Kingdom',
-					sportId: 100,
-					seasonId: {id: 80001, title: '2015-16'},
-					title: 'Barclays Premier League'
-				},
+				competition: 201,
 				num: 2
 			},
 			matches: [
@@ -152,13 +146,7 @@
 			elementClasses: 'table-striped table-bordered',
 			round: {
 				id: 301,
-				competitionId: {
-					id: 201,
-					country: 'United Kingdom',
-					sportId: 100,
-					seasonId: {id: 80001, title: '2015-16'},
-					title: 'Barclays Premier League'
-				},
+				competition: 201,
 				num: 2
 			},
 			matches: [
@@ -249,13 +237,7 @@
 			elementClasses: 'table-striped table-bordered',
 			round: {
 				id: 301,
-				competitionId: {
-					id: 201,
-					country: 'United Kingdom',
-					sportId: 100,
-					seasonId: {id: 80001, title: '2015-16'},
-					title: 'Barclays Premier League'
-				},
+				competition: 201,
 				num: 2
 			},
 			matches: [
@@ -288,13 +270,7 @@
 			elementClasses: 'table-striped table-bordered',
 			round: {
 				id: 301,
-				competitionId: {
-					id: 201,
-					country: 'United Kingdom',
-					sportId: 100,
-					seasonId: {id: 80001, title: '2015-16'},
-					title: 'Barclays Premier League'
-				},
+				competition: 201,
 				num: 2
 			},
 			matches: [
