Changes seasonId to season

--- a/demos/index.html
+++ b/demos/index.html
@@ -28,8 +28,8 @@
 				competition: {
 					id: 201,
 					country: 'United Kingdom',
-					sportId: 100,
-					seasonId: {id: 80001, title: '2015-16'},
+					sport: {id: 100, title: 'Football'},
+					season: {id: 80001, title: '2015-16'},
 					title: 'Barclays Premier League'
 				},
 				num: 1
