--- a/demos/index.html
+++ b/demos/index.html
@@ -42,7 +42,7 @@
 					goals: {
 						awayGoals: {
 							firstHalf: [
-								{22: 'Walker K. (Rooney W.) (own goal)'}
+								{time: 22, player: 'Walker K.'}
 							],
 							secondHalf: []
 						},
@@ -53,8 +53,9 @@
 					},
 					homeClub: 'Manchester United',
 					matchDate: 1439041500000,
+					referee: '',
 					round: 1,
-					location: {id: 6001, name: 'Old Trafford'},
+					location: {id: 6001, name: 'Old Trafford', city: 'Manchester'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 				{
@@ -66,7 +67,7 @@
 							firstHalf: [],
 							secondHalf: [
 								{
-									72: '(Westwood A.) Gestede R.'
+									time: 72, player: 'Gestede R.'
 								}
 							]
 						},
@@ -77,8 +78,9 @@
 					},
 					homeClub: 'AFC Bournemouth',
 					matchDate: 1439046000000,
+					referee: '',
 					round: 1,
-					location: {id: 6004, name: 'Vitality Stadium'},
+					location: {id: 6004, name: 'Vitality Stadium', city: 'Bournemouth'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 				{
@@ -88,17 +90,17 @@
 					goals: {
 						awayGoals: {
 							firstHalf: [
-								{39: '(Puncheon J.) Zaha W.'}
+								{time: 39, player:'Zaha W.', assist:'Puncheon J'}
 							],
 							secondHalf: [
-								{49: '(Souare P.) Delaney D.'},
-								{94: '(McArthur J.) Cabaye Y.'}
+								{time: 49, player:'Delaney D.', assist: 'Souare P.'},
+								{time: 94, player:'Cabaye Y.', assist: 'McArthur J.'}
 							]
 						},
 						homeGoals: {
 							firstHalf: [],
 							secondHalf: [
-								{69: 'Redmond N. (Hoolahan W.)'}
+								{time: 69, player:'Redmond N.', assist: 'Hoolahan W.'}
 							]
 						}
 					},
@@ -106,7 +108,7 @@
 					matchDate: 1439046000000,
 					round: 1,
 					referee: 'Simon Hooper',
-					location: {id: 6012, name: 'Carrow Road'},
+					location: {id: 6012, name: 'Carrow Road', city: 'Norwich'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 				{
@@ -116,17 +118,17 @@
 					goals: {
 						awayGoals: {
 							firstHalf: [
-								{14: 'Layun M.'}
+								{time: 14, player:'Layun M.'}
 							],
 							secondHalf: [
-								{83: '(Deeney T.) Ighalo O.'}
+								{time: 83, player:'Ighalo O.', assist: 'Deeney T.'}
 							]
 						},
 						homeGoals: {
 							firstHalf: [],
 							secondHalf: [
-								{76: 'Barkley R. (Kone A.)'},
-								{86: 'Kone A. (Lukaku R.)'}
+								{time: 76, player:'Barkley R.', assist: 'Kone A.'},
+								{time: 86, player:'Kone A.', assist: 'Lukaku R.'}
 							]
 						}
 					},
@@ -134,7 +136,7 @@
 					matchDate: 1439046000000,
 					round: 1,
 					referee: 'Mike Jones',
-					location: {id: 6007, name: 'Goodison Park'},
+					location: {id: 6007, name: 'Goodison Park', city: 'Liverpool'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 				{
@@ -145,17 +147,17 @@
 						awayGoals: {
 							firstHalf: [],
 							secondHalf: [
-								{60: '(Rodwell J.) Defoe J.'},
-								{71: '(Lens J.) Fletcher S.'}
+								{time: 60, player:'Defoe J.', assist: 'Rodwell J.'},
+								{time: 71, player:'Fletcher S.', assist: 'Lens J.'}
 							]
 						},
 						homeGoals: {
 							firstHalf: [
-								{11: 'Vardy J. (Albrighton M.)'},
-								{18: 'Mahrez R. (Albrighton M.)'},
-								{25: 'Mahrez R. (Penalty)'}],
+								{time: 11, player:'Vardy J.', assist: 'Albrighton M.'},
+								{time: 18, player:'Mahrez R.', assist: 'Albrighton M.'},
+								{time: 25, player:'Mahrez R.'}],
 							secondHalf: [
-								{66: 'Albrighton M.'}
+								{time: 66, player:'Albrighton M.'}
 							]
 						}
 					},
@@ -163,7 +165,7 @@
 					matchDate: 1439046000000,
 					round: 1,
 					referee: 'Lee Mason',
-					location: {id: 6008, name: 'King Power Stadium'},
+					location: {id: 6008, name: 'King Power Stadium', city: 'Leicester'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 				{
@@ -173,16 +175,16 @@
 					goals: {
 						awayGoals: {
 							firstHalf: [
-								{29: 'Ayew A.'}
+								{time: 29, player: 'Ayew A.'}
 							],
 							secondHalf: [
-								{55: '(Penalty) Gomis B.'}
+								{time: 55, player: 'Gomis B.'}
 							]
 						},
 						homeGoals: {
 							firstHalf: [
-								{23: 'Oscar'},
-								{30: 'Fernandez F. (Own goal)'}
+								{time: 23, player: 'Oscar R.'},
+								{time: 30, player: 'Fernandez F.', ownGoal: true}
 							],
 							secondHalf: []
 						}
@@ -191,7 +193,7 @@
 					matchDate: 1439055000000,
 					round: 1,
 					referee: 'Michael Oliver',
-					location: {id: 6005, name: 'Stamford Bridge'},
+					location: {id: 6005, name: 'Stamford Bridge', city: 'London'},
 					type: {id: 1001, name: 'Premiere League'}
 				}
 			]
@@ -215,7 +217,7 @@
 					goals: {
 						awayGoals: {
 							firstHalf: [
-								{29: 'Mata J.) Januzaj A.'}
+								{time:29, player:'Januzaj A.', assist: 'Mata J.'}
 							],
 							secondHalf: []
 						},
@@ -228,7 +230,7 @@
 					matchDate: 1439581500000,
 					round: 2,
 					referee: 'Mike Dean',
-					location: {id: 6003, name: 'Villa Park'},
+					location: {id: 6003, name: 'Villa Park', city: 'Birmingham'},
 					type: {id: 1001, name: 'Premiere League'}
 				}
 			],
@@ -251,14 +253,14 @@
 						awayGoals: {
 							firstHalf: [],
 							secondHalf: [
-								{78: '(Penalty) Arnautovic M.'},
-								{83: '(Ireland S.) Diouf M.'}
+								{time:78, player:'Arnautovic M.', penalty: true},
+								{time:83, player:'Diouf M.', assist: 'Ireland S.'}
 							]
 						},
 						homeGoals: {
 							firstHalf: [
-								{19: 'Dier E. (Eriksen C.)'},
-								{47: 'Chadli N. (Davies B.)'}],
+								{time:19, player:'Dier E.', assist: 'Eriksen C.'},
+								{time:47, player:'Chadli N.', assist: 'Davies B.'}],
 							secondHalf: []
 						}
 					},
@@ -266,7 +268,7 @@
 					matchDate: 1439650800000,
 					round: 2,
 					referee: 'Robert Madley',
-					location: {id: 6017, name: 'White Hart Lane'},
+					location: {id: 6017, name: 'White Hart Lane', city: 'Tottenham'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 				{
@@ -276,16 +278,16 @@
 					goals: {
 						awayGoals: {
 							firstHalf: [
-								{26: 'Martin R.'},
-								{37: '(Hoolahan W.) Whittaker S.'}],
+								{time:26, player:'Martin R.'},
+								{time:37, player:'Whittaker S.', assist:'Hoolahan W.'}],
 							secondHalf: [
-								{57: '(Hoolahan W.) Redmond N.'}
+								{time:57, player:'Redmond N.', assist:'Hoolahan W.'}
 							]
 						},
 						homeGoals: {
 							firstHalf: [],
 							secondHalf: [
-								{88: 'Watmore D.'}
+								{time:88, player:'Watmore D.'}
 							]
 						}
 					},
@@ -293,7 +295,7 @@
 					matchDate: 1439650800000,
 					round: 2,
 					referee: 'Kevin Friend',
-					location: {id: 6015, name: 'Stadium of Light'},
+					location: {id: 6015, name: 'Stadium of Light', city: 'Sunderland'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 				{
@@ -307,10 +309,10 @@
 						},
 						homeGoals: {
 							firstHalf: [
-								{9: 'Gomis B. (Shelvey J.)'}
+								{time:9, player:'Gomis B.', assist: 'Shelvey J.'}
 							],
 							secondHalf: [
-								{52: 'Ayew A. (Montero J.)'}
+								{time:52, player:'Ayew A.', assist: 'Montero J.'}
 							]
 						}
 					},
@@ -318,7 +320,7 @@
 					matchDate: 1439650800000,
 					round: 2,
 					referee: 'Mike Jones',
-					location: {id: 6016, name: 'Liberty Stadium'},
+					location: {id: 6016, name: 'Liberty Stadium', city: 'Swansea'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 				{
@@ -328,14 +330,14 @@
 					goals: {
 						awayGoals: {
 							firstHalf: [
-								{27: 'Okazaki S.'},
-								{38: '(Albrighton M.) Mahrez R.'}],
+								{time:27, player:'Okazaki S.'},
+								{time:38, player:'Mahrez R.', assist: 'Albrighton M.'}],
 							secondHalf: []
 						},
 						homeGoals: {
 							firstHalf: [],
 							secondHalf: [
-								{55: 'Payet D. (Kouyate C.)'}
+								{time:55, player:'Payet D.', assist: 'Kouyate C.'}
 							]
 						}
 					},
@@ -343,7 +345,7 @@
 					matchDate: 1439650800000,
 					round: 2,
 					referee: 'Anthony Taylor',
-					location: {id: 6020, name: 'Boleyn Ground'},
+					location: {id: 6020, name: 'Boleyn Ground', city: 'London'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 				{
@@ -364,7 +366,7 @@
 					matchDate: 1439650800000,
 					round: 2,
 					referee: 'Paul Tierney',
-					location: {id: 6018, name: 'Vicarage Road'},
+					location: {id: 6018, name: 'Vicarage Road', city: 'Watford'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 				{
@@ -378,11 +380,11 @@
 						},
 						homeGoals: {
 							firstHalf: [
-								{22: '(Kone A.) Lukaku R.'},
-								{45: '(Barkley R.) Lukaku R.'}
+								{time:22, player:'Lukaku R.', assist: 'Kone A.'},
+								{time:45, player:'Lukaku R.', assist: 'Barkley R.'}
 							],
 							secondHalf: [
-								{84: '(Coleman S.) Barkley R.'}
+								{time:84, player:'Barkley R.', assist: 'Coleman S.'}
 							]
 						}
 					},
@@ -390,7 +392,7 @@
 					matchDate: 1439642700000,
 					round: 2,
 					referee: 'Michael Oliver',
-					location: {id: 6013, name: 'St. Marys Stadium'},
+					location: {id: 6013, name: 'St. Marys Stadium', city: 'Southampton'},
 					type: {id: 1001, name: 'Premiere League'}
 				},
 
@@ -417,17 +419,18 @@
 						},
 						homeGoals: {
 							firstHalf: [
-								{32: 'S. Agüero (Toure Y.)'}],
+								{time:32, player:'S. Agüero', assist: 'Toure Y.'}],
 							secondHalf: [
-								{79: 'Kompany V. (Silva D.)'},
-								{85: 'Fernandinho (Silva D.)'}
+								{time:79, player:'Kompany V.', assist: 'Silva D.'},
+								{time:85, player:'Fernandinho O.', assist: 'Silva D.'}
 							]
 						}
 					},
 					homeClub: 'Manchester City',
 					matchDate: 1439740800000,
+					referee: '',
 					round: 2,
-					location: {id: 0, name: 'Etihad Stadium'}
+					location: {id: 0, name: 'Etihad Stadium', city: 'Manchester'}
 				},
 				{
 					id: 7119,
@@ -436,22 +439,23 @@
 					goals: {
 						awayGoals: {
 							firstHalf: [
-								{16: '(Özil M.) Giroud O.'}
+								{time:16, player:'Giroud O.', assist: 'Özil M.'}
 							],
 							secondHalf: [
-								{55: '(Own goal) (Sanchez A.) Delaney D.'}]
+								{time:55, player:'Delaney D.', ownGoal: true, assist: 'Sanchez A.'}]
 						},
 						homeGoals: {
 							firstHalf: [
-								{28: 'Ward J. (McArthur J.)'}],
+								{time:28, player:'Ward J.', assist: 'McArthur J.'}],
 							secondHalf: [
 							]
 						}
 					},
 					homeClub: 'Crystal Palace',
 					matchDate: 1439731800000,
+					referee: '',
 					round: 2,
-					location: {id: 0, name: 'Selhurst Park'}
+					location: {id: 0, name: 'Selhurst Park', city: 'London'}
 				}
 
 			],
@@ -478,7 +482,7 @@
 						},
 						homeGoals: {
 							firstHalf: [
-								{26: 'Benteke C. (Henderson J.)'}
+								{time:26, player:'Benteke C.', assist: 'Henderson J.'}
 							],
 							secondHalf: [
 							]
@@ -486,8 +490,9 @@
 					},
 					homeClub: 'Liverpool FC',
 					matchDate: 1439841600000,
+					referee: '',
 					round: 2,
-					location: {id: 6013, name: 'Anfield Road'}
+					location: {id: 6013, name: 'Anfield Road', city: 'Liverpool'}
 				}
 			],
 			roundDay: new Date(1439841600000)
