Added and refactored demo data

--- a/demos/index.html
+++ b/demos/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" href="../build/round.css">
 
+	<script src="hajdu-bihar-201516.js"></script>
+	<script src="united-kingdom-201516.js"></script>
 	<script src="../build/globals/Round.js"></script>
 	<style>
 		table {
@@ -34,169 +36,7 @@
 				},
 				num: 1
 			},
-			matches: [
-				{
-					id: 7101,
-					attendance: 75261,
-					awayClub: 'Tottenham Hotspurs',
-					goals: {
-						awayGoals: {
-							firstHalf: [
-								{time: 22, player: 'Walker K.'}
-							],
-							secondHalf: []
-						},
-						homeGoals: {
-							firstHalf: [],
-							secondHalf: []
-						}
-					},
-					homeClub: 'Manchester United',
-					matchDate: 1439041500000,
-					referee: '',
-					round: 1,
-					location: {id: 6001, name: 'Old Trafford', city: 'Manchester'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-				{
-					id: 7102,
-					attendance:  11155,
-					awayClub: 'Aston Villa',
-					goals: {
-						awayGoals: {
-							firstHalf: [],
-							secondHalf: [
-								{
-									time: 72, player: 'Gestede R.'
-								}
-							]
-						},
-						homeGoals: {
-							firstHalf: [],
-							secondHalf: []
-						}
-					},
-					homeClub: 'AFC Bournemouth',
-					matchDate: 1439046000000,
-					referee: '',
-					round: 1,
-					location: {id: 6004, name: 'Vitality Stadium', city: 'Bournemouth'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-				{
-					id: 7103,
-					attendance: 27036,
-					awayClub: 'Crystal Palace',
-					goals: {
-						awayGoals: {
-							firstHalf: [
-								{time: 39, player:'Zaha W.', assist:'Puncheon J'}
-							],
-							secondHalf: [
-								{time: 49, player:'Delaney D.', assist: 'Souare P.'},
-								{time: 94, player:'Cabaye Y.', assist: 'McArthur J.'}
-							]
-						},
-						homeGoals: {
-							firstHalf: [],
-							secondHalf: [
-								{time: 69, player:'Redmond N.', assist: 'Hoolahan W.'}
-							]
-						}
-					},
-					homeClub: 'Norwich City',
-					matchDate: 1439046000000,
-					round: 1,
-					referee: 'Simon Hooper',
-					location: {id: 6012, name: 'Carrow Road', city: 'Norwich'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-				{
-					id: 7104,
-					attendance: 39063,
-					awayClub: 'Watford FC',
-					goals: {
-						awayGoals: {
-							firstHalf: [
-								{time: 14, player:'Layun M.'}
-							],
-							secondHalf: [
-								{time: 83, player:'Ighalo O.', assist: 'Deeney T.'}
-							]
-						},
-						homeGoals: {
-							firstHalf: [],
-							secondHalf: [
-								{time: 76, player:'Barkley R.', assist: 'Kone A.'},
-								{time: 86, player:'Kone A.', assist: 'Lukaku R.'}
-							]
-						}
-					},
-					homeClub: 'Everton',
-					matchDate: 1439046000000,
-					round: 1,
-					referee: 'Mike Jones',
-					location: {id: 6007, name: 'Goodison Park', city: 'Liverpool'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-				{
-					id: 7105,
-					attendance: 32242,
-					awayClub: 'Sunderland AFC',
-					goals: {
-						awayGoals: {
-							firstHalf: [],
-							secondHalf: [
-								{time: 60, player:'Defoe J.', assist: 'Rodwell J.'},
-								{time: 71, player:'Fletcher S.', assist: 'Lens J.'}
-							]
-						},
-						homeGoals: {
-							firstHalf: [
-								{time: 11, player:'Vardy J.', assist: 'Albrighton M.'},
-								{time: 18, player:'Mahrez R.', assist: 'Albrighton M.'},
-								{time: 25, player:'Mahrez R.'}],
-							secondHalf: [
-								{time: 66, player:'Albrighton M.'}
-							]
-						}
-					},
-					homeClub: 'Leicester City',
-					matchDate: 1439046000000,
-					round: 1,
-					referee: 'Lee Mason',
-					location: {id: 6008, name: 'King Power Stadium', city: 'Leicester'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-				{
-					id: 7106,
-					attendance: 41232,
-					awayClub: 'Swansea City',
-					goals: {
-						awayGoals: {
-							firstHalf: [
-								{time: 29, player: 'Ayew A.'}
-							],
-							secondHalf: [
-								{time: 55, player: 'Gomis B.'}
-							]
-						},
-						homeGoals: {
-							firstHalf: [
-								{time: 23, player: 'Oscar R.'},
-								{time: 30, player: 'Fernandez F.', ownGoal: true}
-							],
-							secondHalf: []
-						}
-					},
-					homeClub: 'Chelsea FC',
-					matchDate: 1439055000000,
-					round: 1,
-					referee: 'Michael Oliver',
-					location: {id: 6005, name: 'Stamford Bridge', city: 'London'},
-					type: {id: 1001, name: 'Premiere League'}
-				}
-			]
+			matches: united_kingdom_201516_01
 		});
 	</script>
 
@@ -209,31 +49,7 @@
 				competition: 201,
 				num: 2
 			},
-			matches: [
-				{
-					id: 7111,
-					attendance: 42200,
-					awayClub: 'Manchester United',
-					goals: {
-						awayGoals: {
-							firstHalf: [
-								{time:29, player:'Januzaj A.', assist: 'Mata J.'}
-							],
-							secondHalf: []
-						},
-						homeGoals: {
-							firstHalf: [],
-							secondHalf: []
-						}
-					},
-					homeClub: 'Aston Villa',
-					matchDate: 1439581500000,
-					round: 2,
-					referee: 'Mike Dean',
-					location: {id: 6003, name: 'Villa Park', city: 'Birmingham'},
-					type: {id: 1001, name: 'Premiere League'}
-				}
-			],
+			matches: united_kingdom_201516_02_01,
 			roundDay: new Date(1439581500000)
 		});
 
@@ -244,159 +60,7 @@
 				competition: 201,
 				num: 2
 			},
-			matches: [
-				{
-					id: 7112,
-					attendance: 36004,
-					awayClub: 'Stoke City',
-					goals: {
-						awayGoals: {
-							firstHalf: [],
-							secondHalf: [
-								{time:78, player:'Arnautovic M.', penalty: true},
-								{time:83, player:'Diouf M.', assist: 'Ireland S.'}
-							]
-						},
-						homeGoals: {
-							firstHalf: [
-								{time:19, player:'Dier E.', assist: 'Eriksen C.'},
-								{time:47, player:'Chadli N.', assist: 'Davies B.'}],
-							secondHalf: []
-						}
-					},
-					homeClub: 'Tottenham Hotspurs',
-					matchDate: 1439650800000,
-					round: 2,
-					referee: 'Robert Madley',
-					location: {id: 6017, name: 'White Hart Lane', city: 'Tottenham'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-				{
-					id: 7113,
-					attendance: 41379,
-					awayClub: 'Norwich City',
-					goals: {
-						awayGoals: {
-							firstHalf: [
-								{time:26, player:'Martin R.'},
-								{time:37, player:'Whittaker S.', assist:'Hoolahan W.'}],
-							secondHalf: [
-								{time:57, player:'Redmond N.', assist:'Hoolahan W.'}
-							]
-						},
-						homeGoals: {
-							firstHalf: [],
-							secondHalf: [
-								{time:88, player:'Watmore D.'}
-							]
-						}
-					},
-					homeClub: 'Sunderland AFC',
-					matchDate: 1439650800000,
-					round: 2,
-					referee: 'Kevin Friend',
-					location: {id: 6015, name: 'Stadium of Light', city: 'Sunderland'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-				{
-					id: 7114,
-					attendance: 20678,
-					awayClub: 'Newcastle United',
-					goals: {
-						awayGoals: {
-							firstHalf: [],
-							secondHalf: []
-						},
-						homeGoals: {
-							firstHalf: [
-								{time:9, player:'Gomis B.', assist: 'Shelvey J.'}
-							],
-							secondHalf: [
-								{time:52, player:'Ayew A.', assist: 'Montero J.'}
-							]
-						}
-					},
-					homeClub: 'Swansea City',
-					matchDate: 1439650800000,
-					round: 2,
-					referee: 'Mike Jones',
-					location: {id: 6016, name: 'Liberty Stadium', city: 'Swansea'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-				{
-					id: 7115,
-					attendance: 34857,
-					awayClub: 'Leicester City',
-					goals: {
-						awayGoals: {
-							firstHalf: [
-								{time:27, player:'Okazaki S.'},
-								{time:38, player:'Mahrez R.', assist: 'Albrighton M.'}],
-							secondHalf: []
-						},
-						homeGoals: {
-							firstHalf: [],
-							secondHalf: [
-								{time:55, player:'Payet D.', assist: 'Kouyate C.'}
-							]
-						}
-					},
-					homeClub: 'West Ham',
-					matchDate: 1439650800000,
-					round: 2,
-					referee: 'Anthony Taylor',
-					location: {id: 6020, name: 'Boleyn Ground', city: 'London'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-				{
-					id: 7116,
-					attendance: 20011,
-					awayClub: 'West Brom',
-					goals: {
-						awayGoals: {
-							firstHalf: [],
-							secondHalf: []
-						},
-						homeGoals: {
-							firstHalf: [],
-							secondHalf: []
-						}
-					},
-					homeClub: 'Watford FC',
-					matchDate: 1439650800000,
-					round: 2,
-					referee: 'Paul Tierney',
-					location: {id: 6018, name: 'Vicarage Road', city: 'Watford'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-				{
-					id: 7117,
-					attendance: 30966,
-					awayClub: 'Everton',
-					goals: {
-						awayGoals: {
-							firstHalf: [],
-							secondHalf: []
-						},
-						homeGoals: {
-							firstHalf: [
-								{time:22, player:'Lukaku R.', assist: 'Kone A.'},
-								{time:45, player:'Lukaku R.', assist: 'Barkley R.'}
-							],
-							secondHalf: [
-								{time:84, player:'Barkley R.', assist: 'Coleman S.'}
-							]
-						}
-					},
-					homeClub: 'Southampton',
-					matchDate: 1439642700000,
-					round: 2,
-					referee: 'Michael Oliver',
-					location: {id: 6013, name: 'St. Marys Stadium', city: 'Southampton'},
-					type: {id: 1001, name: 'Premiere League'}
-				},
-
-			],
+			matches: united_kingdom_201516_02_02,
 			roundDay: new Date(1439650800000)
 		});
 
@@ -407,58 +71,7 @@
 				competition: 201,
 				num: 2
 			},
-			matches: [
-				{
-					id: 7118,
-					attendance: 54331,
-					awayClub: 'Chelsea FC',
-					goals: {
-						awayGoals: {
-							firstHalf: [],
-							secondHalf: []
-						},
-						homeGoals: {
-							firstHalf: [
-								{time:32, player:'S. Agüero', assist: 'Toure Y.'}],
-							secondHalf: [
-								{time:79, player:'Kompany V.', assist: 'Silva D.'},
-								{time:85, player:'Fernandinho O.', assist: 'Silva D.'}
-							]
-						}
-					},
-					homeClub: 'Manchester City',
-					matchDate: 1439740800000,
-					referee: '',
-					round: 2,
-					location: {id: 0, name: 'Etihad Stadium', city: 'Manchester'}
-				},
-				{
-					id: 7119,
-					attendance: 24732,
-					awayClub: 'Arsenal',
-					goals: {
-						awayGoals: {
-							firstHalf: [
-								{time:16, player:'Giroud O.', assist: 'Özil M.'}
-							],
-							secondHalf: [
-								{time:55, player:'Delaney D.', ownGoal: true, assist: 'Sanchez A.'}]
-						},
-						homeGoals: {
-							firstHalf: [
-								{time:28, player:'Ward J.', assist: 'McArthur J.'}],
-							secondHalf: [
-							]
-						}
-					},
-					homeClub: 'Crystal Palace',
-					matchDate: 1439731800000,
-					referee: '',
-					round: 2,
-					location: {id: 0, name: 'Selhurst Park', city: 'London'}
-				}
-
-			],
+			matches: united_kingdom_201516_02_03,
 			roundDay: new Date(1439740800000)
 		});
 
@@ -469,33 +82,43 @@
 				competition: 201,
 				num: 2
 			},
-			matches: [
-				{
-					id: 7120,
-					attendance: 44102,
-					awayClub: 'AFC Bournemouth',
-					goals: {
-						awayGoals: {
-							firstHalf: [
-							],
-							secondHalf: []
-						},
-						homeGoals: {
-							firstHalf: [
-								{time:26, player:'Benteke C.', assist: 'Henderson J.'}
-							],
-							secondHalf: [
-							]
-						}
-					},
-					homeClub: 'Liverpool FC',
-					matchDate: 1439841600000,
-					referee: '',
-					round: 2,
-					location: {id: 6013, name: 'Anfield Road', city: 'Liverpool'}
-				}
-			],
+			matches: united_kingdom_201516_02_04,
 			roundDay: new Date(1439841600000)
+		});
+	</script>
+	<h1>2015-16 Hajdú-Bihar Megyei III. o.</h1>
+	<script>
+		new metal.Round({
+			elementClasses: 'table-striped table-bordered',
+			round: {
+				id: 1011,
+				competition: {
+					id: 1012,
+					country: 'Magyarország',
+					sport: {id: 100, title: 'Labdarúgás'},
+					season: {id: 80001, title: '2015-16'},
+					title: 'Hajdú-Bihar Megyei III. o. Déli'
+				},
+				num: 1
+			},
+			matches: hajdu_bihar_201516_01,
+			viewType: 2
+		});
+		new metal.Round({
+			elementClasses: 'table-striped table-bordered',
+			round: {
+				id: 1012,
+				competition: {
+					id: 1012,
+					country: 'Magyarország',
+					sport: {id: 100, title: 'Labdarúgás'},
+					season: {id: 80001, title: '2015-16'},
+					title: 'Hajdú-Bihar Megyei III. o. Déli'
+				},
+				num: 2
+			},
+			matches: hajdu_bihar_201516_02,
+			viewType: 2
 		});
 	</script>
 </body>
